customer-service/k8s/customer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-deployment
  namespace: dev
  labels:
    app: customer-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: mvgagliotti/customer-service:1.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 7002
