customer-service/k8s/customer-service-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service-db-service
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: postgres
