customer-service/k8s/customer-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service-service
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 7002
      protocol: TCP
  selector:
    app: customer-service
