customer-service/k8s/customer-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer-service-ingress
  namespace: dev
spec:
  rules:
    - host: mvgc.cloud.com
      http:
        paths:
          - path: /
            backend:
              serviceName: customer-service-service
              servicePort: 80
